addons/dashboard/manifests/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard 
  namespace: kube-system 
  annotations: 
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://httpbin.org/basic-auth/usr/passwd"
spec:
  rules:
  - host: gmt.dash.me
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard 
          servicePort: 443
